# order-book-benchmark

./: CMakeLists.txt  LICENSE
data/: random_feed.csv  sample_feed.csv
include/orderbook/: event.h  feed_parser.h  flat_order_book.h  heap_order_book.h  order_book.h  trade.h  tree_order_book.h
src/: feed_parser.cpp  flat_order_book.cpp  heap_order_book.cpp  main.cpp  order_book.cpp  tree_order_book.cpp
tests/: test_feed_parser.cpp  test_framework.h  test_main.cpp  test_order_book.cpp
tools/: generate_feed.py
